Fix alignment

--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -1112,6 +1112,7 @@ section .content {
 
 .experience .paragraph-title, #contact .paragraph-title {
     margin-top: 0;
+    text-align: left;
 }
 
 .experience .aditional-info {
